k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prod-strict-mtls
  namespace: prod
spec:
  mtls:
    mode: STRICT
